k3s/infras/installation/argocd/argocd-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-dashboard
  namespace: argocd
spec:
  entryPoints:
    - web # or use "web" if you don't use HTTPS
  routes:
    - match: Host(`argocd.manhlam.name.vn`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
  # tls:
  #  cloudflare or your certResolver name
  #   certResolver: cloudflare
